--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Small Tab",
+  "name": "__MSG_appName__",
+  "default_locale": "en",
   "version": "1.0",
-  "description": "A simple and customizable new tab page.",
+  "description": "__MSG_appDesc__",
   
 
   "chrome_url_overrides": {
