--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
         "scripts/utils.js",
         "scripts/i18n.js",
         "scripts/storage.js",
-        "scripts/ui.js"
+        "scripts/ui.js",
+        "scripts/search.js"
       ],
       "matches": ["<all_urls>"]
     }
